Back Button z-index fix

--- a/frontend/materialize/sass/components/main.scss
+++ b/frontend/materialize/sass/components/main.scss
@@ -1011,7 +1011,7 @@ hr {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
   background: url("../img/svg/downChev.svg") no-repeat !important;
-  z-index: 3;
+  z-index: 13;
 
   width: 25px;  
   height: 25px;
